add_subdirectory(vtkkwiml)
add_subdirectory(vtksys)
add_subdirectory(vtkqttesting)
add_subdirectory(vtkprotobuf)

target_sources(qtguitest
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/pqApplicationComponentsModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pqComponentsModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pqCoreModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pqPythonModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pqQtConfig.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pqWidgetsModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkBuild.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkCommonCoreModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkCommonDataModelModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkCommonMiscModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkDebug.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkFeatures.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkGUISupportQtModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkIOXMLParserModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkLegacy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkOptions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPlatform.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPVVersion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPVVTKExtensionsCoreModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPython.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPythonCompatibility.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPythonConfigure.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkPythonInterpreterModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkRemotingApplicationModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkRemotingCoreModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkRemotingServerManagerModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkRemotingSettingsModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkThreads.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkVersionFull.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkVersionMacros.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtkWrappingPythonCoreModule.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtk_cli11.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtk_cli11_external.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtk_cli11_forward.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtk_kwiml.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vtk_protobuf.h
)

target_include_directories(qtguitest
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
